--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,5 +4,5 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#fff",
-  "description": "App to irritate music haters",
+  "description": "App to irritate music haters"
 }
