--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "express": "latest",
+    "socket.io": "latest"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   }
 }
